Fixed background opacity fade in Fixed bad file path for navbar Re-aligned Navbar items to the right

--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,8 @@ body {
     top: 0;
     left: 0;
     z-index: 2;
+    display: flex;
+    justify-content: right;
 }
 
 .nav-link {
@@ -94,7 +96,7 @@ body {
     height: 100%;
     background: url('Assets/bg.jpg') no-repeat center center fixed;
     background-size: cover;
-    opacity: 1;
+    opacity: 0;
     transition: opacity 1.5s ease-in-out;
 }
 
